# bookstore_api

./: .env  Cargo.toml
src/: main.rs
src/auth/: mod.rs
src/controllers/: auth.rs  author.rs  book.rs  mod.rs
src/db/: mod.rs
src/entities/: author.rs  book.rs  mod.rs  prelude.rs  user.rs
src/fairings/: mod.rs
src/migrator/: m20220101_000001_create_user_table.rs  m20240403_124359_create_author_table.rs  m20240403_125836_create_book_table.rs  mod.rs
